# notify

./: .gitignore  AGENTS.md  Cargo.toml  HOOK_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  NOTIFICATION_POLICY.md  PLAN.md  README.md  SELECTED_ARCHITECTURE.md  final-flow-demo.html  logic-chain.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/task-design/: project.md
docs/task-design/modules/floating-status-bar/: design.md
docs/task-design/prototypes/: floating-status-bar.html
docs/task-design/requirements/: floating-status-bar.md
scripts/: prepare-tauri-sidecars.ps1
scripts/hooks/: agent-notify-hook.ps1  claude-hook.template.json  codex-hook.template.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-ui/: index.html
src-ui/src/: main.ts  styles.css
src/agent-notify/: Cargo.toml
src/agent-notify-core/: Cargo.toml
src/agent-notify-core/src/: adapters.rs  config.rs  dedupe.rs  event.rs  lib.rs  notification.rs  redact.rs
src/agent-notify-tray/: Cargo.toml
src/agent-notify-tray/src/: floating_status.rs  focus.rs  main.rs
src/agent-notify/src/: main.rs
src/hook-manager/: Cargo.toml
src/hook-manager/src/: lib.rs
