[workspace]
members = [
  "src/agent-notify-core",
  "src/agent-notify",
  "src/agent-notify-tray",
  "src/hook-manager",
  "src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
agent-notify-core = { path = "src/agent-notify-core" }
hook-manager = { path = "src/hook-manager" }
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml_edit = "0.22"
uuid = { version = "1", features = ["serde", "v4"] }
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
