[package]
name = "agent-notify-desktop"
version.workspace = true
edition = "2021"
rust-version = "1.77.2"
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-notify-core.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tokio.workspace = true
windows-sys.workspace = true
