[package]
name = "agent-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agent-notify-core.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
