[package]
name = "hook-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agent-notify-core.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
